@@ -11,6 +11,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5530] Rename tx_seminars_Bag_Organizer to Tx_Seminars_Bag_Organizer
 - [#5516] Rename tx_seminars_BackEnd_ConfirmEventMailForm to Tx_Seminars_BackEnd_ConfirmEventMailForm
 - [#5508] Rename tx_oelib_Model_BackEndUser to Tx_Oelib_Model_BackEndUser
 - [#5510] Rename tx_oelib_List to Tx_Oelib_List
